Updating of services

--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
       <ul>
         <li><a href="#home" class="nav-link">Home</a></li>
         <li><a href="#services" class="nav-link">Services</a></li>
-        <li><a href="#gallery" class="nav-link">Gallery</a></li>
+        <!-- <li><a href="#gallery" class="nav-link">Gallery</a></li> -->
+         <li><a href="#hours" class="nav-link">Hours</a></li>
         <li><a href="#contact" class="nav-link">Contact</a></li>
-        <li><a href="#hours" class="nav-link">Hours</a></li>
+        
       </ul>
     </nav>
   </header>
@@ -29,70 +30,59 @@
       <p>Professional Services business right around the corner! Literally! Quality, care, and attention to detail.</p>
     </section>
 
+    <hr>
+
     <section id="services" class="section">
       <h1>Our Services</h1>
       <br>
 
       <div class="service">
         <h3>Car Wash Packages</h3>
-        <p>1. Full Wash + Vacuum (Outside wash and dry, interior vacuum and polish. Tire shine) - R120 </p>
-        <p>2. Engine bay cleaning (Dust and grime removal) - R80 </p>
-        <p>3. Full detail (Full Wash + Vacuum, Engine bay cleaning + Interior deep clean) - R250</p>
+        <p>1. Outside Wash - R100 </p>
+        <p>2. Inside Vacuum + Polish - R80 </p>
+        <p>3. Packaged deal - R150</p>
+        <p> (Outside wash + Inside vacuum + Polish) </p>
+        <p>4. Monthly deal - R500 (Save R100)</p>
+        <p> (4x Packaged deal washes) </p>
       </div>
       <br>
 
       <div class="service">
+        <h3>Dustbin Packages</h3>
+        <p>1. Standbard bin clean - R30 </p>
+        <p>2. Monthly washes - R100 (Save R20)</p>
+        <p>(Every Tuesday after Municipal Pickup and delivered to your door)</p>
+      </div>
+
+      <div class="service">
+        <h3>Monthly Package</h3>
+        <p>Option 4 (Car Wash Package) + Option 2 (Dustbin Package) - R450</p>
+      </div>
+      <!-- <div class="service">
         <h3>Pressure Washing</h3>
         <p>1. Standard cleaning (Pavement, tiles refreshing) R30/square metre</p>
         <p>2. Heavy duty cleaning (Moss etc.) R40/square metre</p>
         <br>
         <p>Please note! This pricing is a guideline only for floor areas less than 40 square metres. Any areas larger than that will increase the pricing.</p>
       </div>
-      <br>
+      <br> -->
 
-      <div class="service">
+      <!-- <div class="service">
         <h3>Roofing services</h3>
         <p>1. Roofing (Removing moss/growths) R60/square metre</p>
         <p>2. Roofing (Full roof spray) R1000</p>
         <p>3. Gutter cleaning (Clear gutters of any debris that might block them) R200</p>
       </div>
-      <br>
+      <br> -->
 
-      <div class="service">
+      <!-- <div class="service">
         <h3>Window washing</h3>
         <p>1. Inside OR Outside wash (Not both) R100</p>
         <p>2. Inside AND Outside wash (Both) R180</p>
-      </div>
-    </section>
+      </div> -->
+    </section> 
 
-    <section id="gallery" class="section">
-      <h2>Before & After</h2>
-      <div class="gallery">
-
-        <div>
-          <p>Before:</p>
-          <img src="images/before_pressure.jpg" alt="Before driveway cleaning" title="Before driveway cleaning" />
-        </div>
-
-        <div>
-          <p>After:</p>
-          <img src="images/after_pressure.jpg" alt="After driveway cleaning" title="After driveway cleaning"/>
-        </div>
-        
-        <div>
-          <p>
-            <!-- Image for car wash before -->
-          </p>
-        </div>
-
-        <div>
-          <p>
-            <!-- Image for car wash after -->
-          </p>
-        </div>
-
-      </div>
-    </section>
+    <hr>
 
     <section id="hours" class="section">
       <h2>Operating Hours</h2>
@@ -103,6 +93,8 @@
       </div>
 
     </section>
+
+    <hr>
 
     <section id="contact" class="section">
       <h2>Request a Quote</h2>
