--- a/index.html
+++ b/index.html
@@ -32,28 +32,39 @@
       <br>
 
       <div class="service-gallery">
-      <h2>Gallery</h2>
-        <div class="gallery-row">
-          <div>
-            <!-- <h4>Before</h4> -->
-            <img class="image" src="images/cherry_tigo.jpeg" style="width: 500px;"></img>
+        <h2>Gallery</h2>
+          <div class="gallery-row">
+            <div>
+              <!-- <h4>Before</h4> -->
+              <img class="image" src="images/cherry_tigo.jpeg" style="width: 500px;"></img>
+            </div>
+            <!-- <div>
+              <h4>After</h4>
+              <img class="image" src="images/floor_dirt_after.jpeg"></img>
+            </div> -->
           </div>
-          <!-- <div>
-            <h4>After</h4>
-            <img class="image" src="images/floor_dirt_after.jpeg"></img>
-          </div> -->
-        </div>
 
-        <div class="gallery-row">
-          <div>
-            <h4>Before</h4>
-            <img class="image" src="images/floor_dirt_before.jpeg"></img>
+          <div class="gallery-row">
+            <div>
+              <h4>Before</h4>
+              <img class="image" src="images/floor_dirt_before.jpeg"></img>
+            </div>
+            <div>
+              <h4>After</h4>
+              <img class="image" src="images/floor_dirt_after.jpeg"></img>
+            </div>
           </div>
-          <div>
-            <h4>After</h4>
-            <img class="image" src="images/floor_dirt_after.jpeg"></img>
+
+          <div class="gallery-row">
+            <div>
+              <h4>Before</h4>
+              <img class="image" src="images/grass_before.jpeg"></img>
+            </div>
+            <div>
+              <h4>After</h4>
+              <img class="image" src="images/grass_after.jpeg"></img>
+            </div>
           </div>
-        </div>
       </div>
     </div>
 
@@ -63,7 +74,7 @@
     <!-- Services Page -->
     <div id="services" class="page">
       <h1>Our Services</h1>
-      <p style="color: #666; font-style: italic; margin-top: -10px;">Click on each service to view pricing details</p>
+      <p style="color: #666; font-style: italic; margin-top: -10px;">Click on each service to view pricing details. Prices on the right in blue only apply to pensioners. (65 years or older)</p>
       <br>
 
       <div class="service">
@@ -174,7 +185,7 @@
       </div>
 
       <br>
-      <div class="service">
+      <!-- <div class="service">
         <div class="service-header">
           <h3>Roof Painting</h3>
           <span class="arrow">▼</span>
@@ -191,7 +202,7 @@
             <p style="margin-top: 1rem; font-size: 0.9em; color: #666;"><strong>Pensioner Discount:</strong> 10% off</p>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
 
     <!-- Hours Page -->
