Added carousel instead of image rows

--- a/index.html
+++ b/index.html
@@ -33,38 +33,32 @@
 
       <div class="service-gallery">
         <h2>Gallery</h2>
-          <div class="gallery-row">
-            <div>
-              <!-- <h4>Before</h4> -->
-              <img class="image" src="images/cherry_tigo.jpeg" style="width: 500px;"></img>
+        <div class="carousel">
+          <button class="carousel-btn prev" aria-label="Previous image">&lt;</button>
+          <div class="carousel-container">
+            <div class="carousel-slide">
+              <img class="image" src="images/cherry_tigo.jpeg" alt="Cherry Tigo">
             </div>
-            <!-- <div>
-              <h4>After</h4>
-              <img class="image" src="images/floor_dirt_after.jpeg"></img>
-            </div> -->
-          </div>
-
-          <div class="gallery-row">
-            <div>
+            <div class="carousel-slide">
               <h4>Before</h4>
-              <img class="image" src="images/floor_dirt_before.jpeg"></img>
+              <img class="image" src="images/floor_dirt_before.jpeg" alt="Floor dirt before">
             </div>
-            <div>
+            <div class="carousel-slide">
               <h4>After</h4>
-              <img class="image" src="images/floor_dirt_after.jpeg"></img>
+              <img class="image" src="images/floor_dirt_after.jpeg" alt="Floor dirt after">
             </div>
-          </div>
-
-          <div class="gallery-row">
-            <div>
+            <div class="carousel-slide">
               <h4>Before</h4>
-              <img class="image" src="images/grass_before.jpeg"></img>
+              <img class="image" src="images/grass_before.jpeg" alt="Grass before">
             </div>
-            <div>
+            <div class="carousel-slide">
               <h4>After</h4>
-              <img class="image" src="images/grass_after.jpeg"></img>
+              <img class="image" src="images/grass_after.jpeg" alt="Grass after">
             </div>
           </div>
+          <button class="carousel-btn next" aria-label="Next image">&gt;</button>
+          <div class="carousel-indicators"></div>
+        </div>
       </div>
     </div>
 
